client-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client
  namespace: yitam
spec:
  selector:
    app: client
  ports:
  - name: http
    port: 80
    targetPort: 80
  - name: https
    port: 443
    targetPort: 443
  type: ClusterIP
