server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server
  namespace: yitam
spec:
  selector:
    app: server
  ports:
  - port: 3000
    targetPort: 3000
  type: ClusterIP
